# embedded-debugger-mcp

./: Cargo.toml  README.md  README_zh.md
.claude-plugin/: plugin.json
.github/scripts/: validate_skill.py
.github/workflows/: ci.yml
examples/: README.md
examples/STM32_demo/: Cargo.toml  README.md  rust-toolchain.toml
examples/STM32_demo/.cargo/: config.toml
examples/STM32_demo/docs/: ALL_22_TOOLS_TESTING_SUMMARY.md  RTT_BIDIRECTIONAL_DESIGN.md  RTT_TESTING_RESULTS.md
skills/embedded-debugger/: SKILL.md
skills/embedded-debugger/agents/: openai.yaml
skills/embedded-debugger/references/: default-prompt.md
src/: config.rs  error.rs  lib.rs  main.rs  skill_installer.rs  utils.rs
src/debugger/: discovery.rs  mod.rs
src/flash/: manager.rs  mod.rs
src/rtt/: elf_parser.rs  manager.rs  mod.rs
src/tools/: debugger_tools.rs  mod.rs  types.rs
src/tools/debugger_tools/: flash.rs  formatting.rs  guards.rs  management.rs  memory.rs  rtt.rs  server.rs  session.rs  target_control.rs
tests/: integration_tests.rs
